--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/yandex-maps": "^2.1.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-yandex-maps": "^4.6.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
