--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
-    "@types/yandex-maps": "^2.1.20",
+    "leaflet": "^1.7.1",
+    "leaflet-control-geocoder": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
-    "react-yandex-maps": "^4.6.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.9"
   }
 }
