--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/system": "^2.0.0",
+    "@chakra-ui/tabs": "^2.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "leaflet": "^1.7.1",
-    "leaflet-control-geocoder": "^2.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.5",
-    "react-scripts": "5.0.0",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@types/sass": "^1.43.1",
+    "emotion": "^11.0.0",
+    "mapbox-gl": "^2.8.2",
+    "react": "18.1.0",
+    "react-dom": "^18.1.0",
+    "react-map-gl": "^7.0.11",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +51,6 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.9"
+    "@types/mapbox-gl": "^2.7.1"
   }
 }
