--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/tabs": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -17,11 +18,15 @@
     "@types/sass": "^1.43.1",
     "emotion": "^11.0.0",
     "mapbox-gl": "^2.8.2",
+    "prettier": "^2.6.2",
     "react": "18.1.0",
     "react-dom": "^18.1.0",
     "react-map-gl": "^7.0.11",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
