--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/tabs": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@types/sass": "^1.43.1",
+    "axios": "^0.27.2",
     "emotion": "^11.0.0",
     "mapbox-gl": "^2.8.2",
     "prettier": "^2.6.2",
@@ -32,6 +34,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "lint": "eslint",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -56,6 +59,14 @@
     ]
   },
   "devDependencies": {
-    "@types/mapbox-gl": "^2.7.1"
+    "@types/mapbox-gl": "^2.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
