--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@types/react-dom": "^18.0.4",
     "@types/sass": "^1.43.1",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "emotion": "^11.0.0",
     "mapbox-gl": "^2.8.2",
     "prettier": "^2.6.2",
     "react": "18.1.0",
+    "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
     "react-map-gl": "^7.0.11",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-timefield": "^3.2.5",
+    "react-switch": "^6.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
