--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-simple-timefield": "^3.2.5",
     "react-switch": "^6.0.0",
+    "react-weekday-picker": "^1.0.8",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
