--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mui/material": "^5.8.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -25,7 +26,7 @@
     "react": "18.1.0",
     "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
-    "react-map-gl": "^7.0.11",
+    "react-map-gl": "^7.0.15",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
