--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/tabs": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.9.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@mui/material": "^5.8.1",
     "@reduxjs/toolkit": "^1.8.1",
@@ -26,6 +27,7 @@
     "react": "18.1.0",
     "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.3",
     "react-map-gl": "^7.0.15",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
@@ -37,7 +39,8 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "lint": "eslint",
